[docker-compose] always restart containers (on failures / boot time)
This setting in docker-compose will make sure the containers are
always restarted in case of either failure or when the host machine
starts the docker service.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,14 +4,16 @@ services:
   database:
     image: "postgres:12"
     env_file: .env
+    restart: always
     volumes:
-      - "/var/lib/postgresql/data"
+      - "odoo-pg-data:/var/lib/postgresql/data"
   app:
     build: .
     env_file: .env
+    restart: always
     ports:
       - "8069:8069"
     links:
       - "database:database"
     volumes:
-      - "/home/app/.local/share/Odoo"
+      - "odoo-shared-data:/home/app/.local/share/Odoo"
