[docker-compose]: fix syntax for volumes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,3 +17,7 @@ services:
       - "database:database"
     volumes:
       - "odoo-shared-data:/home/app/.local/share/Odoo"
+
+volumes:
+  odoo-shared-data:
+  odoo-pg-data:
